force-app/main/default/objects/Product_Bundle_Entry__c/Product_Bundle_Entry__c.object-meta.xml
<CustomObject>
    <label>Product Bundle Entry</label>
    <nameField>
        <label>Product Bundle Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundle Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>