force-app/main/default/objects/Product_Bundle_Entry__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Bundle (Parent)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A bundled product must be selected</errorMessage>
        <filterItems>
            <field>Product2.Bundle__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select a bundled product</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundled Product Entries (Children)</relationshipLabel>
    <relationshipName>Product_Bundle_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>