force-app/main/default/objects/Product_Bundle_Entry__c/fields/X7S_Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>X7S_Product_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>7S Product Bundle (Parent)</label>
    <referenceTo>x7S_Product__c</referenceTo>
    <relationshipLabel>Bundled Product Entries (Children)</relationshipLabel>
    <relationshipName>Product_Bundle_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>