force-app/main/default/objects/Product_Bundle_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Bundle__c</columns>
    <columns>Product_Bundle_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>